--- a/HTML/iframe.html
+++ b/HTML/iframe.html
@@ -1,38 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <title>Tabelas</title>
     <meta charset="UTF-8">
-    <meta name="author" content="Gabriela Schirmer">
-    <meta name="descripition" content="Primeira página html">
-    <meta name="keybords" content="HTML, CSS, JavaScript">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h2>Tabelas</h2>
-    <br> 
-        <table border="2">
-            <caption> Monthly savings</caption>
-            <thead>
-                <tr>
-                    <th>Month</th>
-                    <th>Savings</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>January</td>
-                    <td>$100</td>
-                </tr>
-                <tr>
-                    <td>February</td>
-                    <td>$80</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                <td ><small>Sum: $180</small></td>
-            </tr>
-            </tfoot>
-        </table> 
+    <iframe 
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/3vKzcbEHIvA" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
+    <iframe 
+        style="border-radius:12px"
+        src="https://open.spotify.com/embed/track/2HZLXBOnaSRhXStMLrq9fD?utm_source=generator" 
+        width="100%" 
+        height="80" 
+        frameBorder="0" 
+        allowfullscreen="" 
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 </body>
+</html> 
