--- a/HTML/img.html
+++ b/HTML/img.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv ="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<div id="paragrafos">  
- <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi at maiores animi pariatur odit porro distinctio quas eos molestiae saepe. Asperiores necessitatibus iste laudantium magni praesentium omnis natus itaque qui?</p>
- <p id="par-gr" class="white-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi at maiores animi pariatur odit porro distinctio quas eos molestiae saepe. Asperiores necessitatibus iste laudantium magni praesentium omnis natus itaque qui?</p>
-<p class="white-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi at maiores animi pariatur odit porro distinctio quas eos molestiae saepe. Asperiores necessitatibus iste laudantium magni praesentium omnis natus itaque qui?</p>
-</div>
+    <div id="imagens">
+        <img width="50%" height="50%" src="https://c.tenor.com/emXtJB4fQ8MAAAAd/perdemo-messi.gif"/>
+    </div>
 </body>
-</html>
+</html> 
