--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv ="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-<div id="paragrafos">  
- <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi at maiores animi pariatur odit porro distinctio quas eos molestiae saepe. Asperiores necessitatibus iste laudantium magni praesentium omnis natus itaque qui?</p>
- <p id="par-gr" class="white-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi at maiores animi pariatur odit porro distinctio quas eos molestiae saepe. Asperiores necessitatibus iste laudantium magni praesentium omnis natus itaque qui?</p>
-<p class="white-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi at maiores animi pariatur odit porro distinctio quas eos molestiae saepe. Asperiores necessitatibus iste laudantium magni praesentium omnis natus itaque qui?</p>
-</div>
-</body>
-</html>
+<html lang="pt-br">
+    <!-- HTML inicial -->
+    <head>
+        <title>Primeira página html</title>
+        <meta charset="utf-8">
+        <meta name="description" content="Primeira página web">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="author" content="Lucas W">
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1.0">
+        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+        <link rel="stylesheet" href="css/styles.css">    
+    </head>
+    <body>
+        <h2>Minha primeira página web</h2>
+@@ -37,6 +39,9 @@ <h2>Minha primeira página web</h2>
+            <li>
+                <a href="iframe.html">IFrame</a>
+            </li>
+            <li>
+                <a href="brincando.html">Lol</a>
+            </li>
+        </ul>
+    </body>
+</html> 
