--- a/HTML/a.html
+++ b/HTML/a.html
@@ -1,38 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <title>Tabelas</title>
     <meta charset="UTF-8">
-    <meta name="author" content="Gabriela Schirmer">
-    <meta name="descripition" content="Primeira página html">
-    <meta name="keybords" content="HTML, CSS, JavaScript">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h2>Tabelas</h2>
-    <br> 
-        <table border="2">
-            <caption> Monthly savings</caption>
-            <thead>
-                <tr>
-                    <th>Month</th>
-                    <th>Savings</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>January</td>
-                    <td>$100</td>
-                </tr>
-                <tr>
-                    <td>February</td>
-                    <td>$80</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                <td ><small>Sum: $180</small></td>
-            </tr>
-            </tfoot>
-        </table> 
+    <div id="links">
+        <a href="https://c.tenor.com/lPjVxg0BXJ4AAAAC/gandalf-happy.gif" target="_blank">
+            <img width="50%" height="50%" src="https://media4.giphy.com/media/8abAbOrQ9rvLG/200.gif"/>
+        </a>
+    </div>
 </body>
+</html>
