--- a/HTML/h.html
+++ b/HTML/h.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <title>Títulos</title>
     <meta charset="UTF-8">
-    <meta name="author" content="Gabriela Schirmer">
-    <meta name="descripition" content="Primeira página html">
-    <meta name="keybords" content="HTML, CSS, JavaScript">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Primeira página html - Títulos</title>
 </head>
 <body>
-<h2>Títulos</h2>
-<br>
-<h1>Título h1</h1>
-<h2>Título h2</h2>
-<h3>Título h3</h3>
-<h4>Título h4</h4>
-<h5>Título h5</h5>
-<h6>Título h6</h6>
+    <div id="titulos">
+        <h1>Título h1</h1>
+        <h2>Título h2</h2>
+        <h3>Título h3</h3>
+        <h4>Título h4</h4>
+        <h5>Título h5</h5>
+        <h6>Título h6</h6>
+    </div>
 </body>
+</html> 
