--- a/html2/index.html
+++ b/html2/index.html
@@ -44,6 +44,9 @@
             <li>
                 <a href="brincando.html">Lol</a>
             </li>
+            <li>
+                <a href="api.html">IFrame</a>
+            </li>
         </ul>
     </body>
 </html>
