--- a/html2/index.html
+++ b/html2/index.html
@@ -45,7 +45,7 @@
                 <a href="brincando.html">Lol</a>
             </li>
             <li>
-                <a href="api.html">IFrame</a>
+                <a href="api.html">API</a>
             </li>
         </ul>
     </body>
